--- a/src/index.css
+++ b/src/index.css
@@ -81,11 +81,12 @@ button {
 }
 
 #walletButton {
-	padding: 7px 16px;
+	padding: 3px 16px;
 	background-color: white;
 	float: right;
 	border: 2px solid #254cdd;
 	color: #254cdd;
+	/*margin-top: 0px;*/
 	margin-top: 0px;
 }
 h2 {
